--- a/wled-compile.yaml
+++ b/wled-compile.yaml
@@ -13,20 +13,20 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: 3.9
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
+
     - name: Install PlatformIO
       run: |
         python -m pip install --upgrade pip
         pip install --upgrade platformio
-        git rm -r $GITHUB_WORKSPACE/*.bin || true
-    - name: Run PlatformIO main esp32dev
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+    - name: Run PlatformIO
       run: |
         rm -rf /tmp/WLEDtemp/* || true
         mkdir -p /tmp/WLEDtemp
-        wget https://github.com/wled/WLED/archive/refs/heads/main.zip -O /tmp/WLEDtemp/mm.zip
-        unzip -o /tmp/WLEDtemp/mm.zip -d /tmp/WLEDtemp
-        find /tmp/WLEDtemp -maxdepth 1 -name "WLED-*" -type d >> /tmp/WLEDtemp/wledfoldername
+        wget https://api.github.com/repos/wled/WLED/zipball/v0.14.4 -O /tmp/WLEDtemp/mm.zip
+        unzip /tmp/WLEDtemp/mm.zip -d /tmp/WLEDtemp
+        find /tmp/WLEDtemp -maxdepth 1 -mindepth 1 -name "*" -type d >> /tmp/WLEDtemp/wledfoldername
         cd `cat /tmp/WLEDtemp/wledfoldername`
         npm install
         echo '[env:custom_build]' >>platformio.ini
@@ -41,19 +41,20 @@ jobs:
         echo '  lennarthennigs/ESP Rotary@^1.5.0' >>platformio.ini
         
         echo 'build_unflags= -D WLED_RELEASE_NAME' >>platformio.ini
-        pio run -e custom_build || pio run -e custom_build || true
-    - name: Copy Files main esp32dev
+        pio run -e custom_build || pio run -e custom_build
+    - name: Copy Files
       run: |
         cd $GITHUB_WORKSPACE
+        git rm -r $GITHUB_WORKSPACE/*.bin || true
         WLEDFOLDERNAME=`cat /tmp/WLEDtemp/wledfoldername`
-        cp ${WLEDFOLDERNAME}/build_output/firmware/custom_build.bin $GITHUB_WORKSPACE/build_main_esp32dev.bin || true
+        cp ${WLEDFOLDERNAME}/build_output/firmware/custom_build.bin $GITHUB_WORKSPACE/
         date -I | tr -d '\n' >$GITHUB_WORKSPACE/last_update_date.txt
-    - name: Commit Files main esp32dev
+    - name: Commit Files
       run: |
         cd $GITHUB_WORKSPACE
         git config user.name "GitHub Actions Bot"
         git config user.email "<>"
-        git add $GITHUB_WORKSPACE/build_main_esp32dev.bin || true
-        git add $GITHUB_WORKSPACE/last_update_date.txt || true
-        git commit -m "Commit Custom Build" || true
-        git push origin main || true
+        git add $GITHUB_WORKSPACE/custom_build.bin
+        git add $GITHUB_WORKSPACE/last_update_date.txt
+        git commit -m "Commit Custom Build"
+        git push origin main
